feat: update conclusiones

--- a/slides/918-truly-the-end.mdx
+++ b/slides/918-truly-the-end.mdx
@@ -1,7 +1,22 @@
 import ClickableNotation from "../src/ClickableNotation"
 
-# Enjoy ☕️, do not <ClickableNotation color="orange" type="crossed-off">binge</ClickableNotation> it.
-
-<br />
-
-# Truly the end 👋🚀
+<ul className="finale-list">
+  <li>
+    <ClickableNotation color="lightgreen">
+      Enjoy ☕️ 
+    </ClickableNotation>
+  </li>
+  <li>
+     <ClickableNotation color="red" type="crossed-off">Do not binge ☕️</ClickableNotation>.
+  </li>
+  <li>
+    <ClickableNotation color="orange" type="bracket">
+      Don't forget to take breaks
+    </ClickableNotation>
+  </li>
+  <li>
+    <ClickableNotation color="cyan" type="underline">
+      Try Pomodoro, you might like it
+    </ClickableNotation>
+  </li>
+</ul>
